--- a/src/client/index.html
+++ b/src/client/index.html
@@ -90,6 +90,8 @@
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="/bower_components/toastr/toastr.js"></script>
   <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="/bower_components/ng-file-upload/ng-file-upload.js"></script>
+  <script src="/bower_components/ng-file-upload-shim/ng-file-upload-shim.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- npm js -->
@@ -130,6 +132,7 @@
   <script src="/src/client/app/newfeed/newfeed.controller.js"></script>
   <script src="/src/client/app/newfeed/newfeed.route.js"></script>
   <script src="/src/client/app/newfeed/peopleNearly.controller.js"></script>
+  <script src="/src/client/app/service/directive.js"></script>
   <script src="/src/client/app/service/user.service.js"></script>
   <script src="/src/client/app/user/login.controller.js"></script>
   <script src="/src/client/app/user/profile.controller.js"></script>
