update edit about profile

--- a/src/client/app/user/profile.html
+++ b/src/client/app/user/profile.html
@@ -1177,10 +1177,15 @@
       <div class="profile-about">
         <div class="title d-flex justify-content-between">
           <span>Tiểu sử</span>
-          <a>Chỉnh sửa</a>
+          <a ng-click="vm.EditAbout()">Chỉnh sửa</a>
         </div>
         <div class="content">
-          <span class="text-dark">Sống và làm những gì mình thích</span>
+          <span class="text-dark" ng-show="!vm.isShowEditAbout">{{vm.currentUser.About}}</span>
+          <textarea class="text-dark w-50" ng-show="vm.isShowEditAbout" rows="3" ng-model="vm.About"></textarea>
+          <div class="mt-3" ng-show="vm.isShowEditAbout">
+            <button class="btn CancelBtn" ng-click="vm.isShowEditAbout = false">Hủy<button>
+            <button class="btn saveBtn" ng-click="vm.SubmitUpdateAbout()" ng-disabled="vm.About == vm.currentUser.About">Lưu</button>
+          </div>
         </div>
       </div>
     </div>
@@ -1209,7 +1214,7 @@
       </div>
       <img ng-src="{{vm.PreviewImage}}" ng-click="vm.ZoomImage(vm.PreviewImage)" style="cursor:pointer;">
       <form>
-        <input type="submit" value="Lưu" style="" class="mt-4" ng-click="vm.SubmitAvatarProfile()">
+        <input type="submit" value="Lưu" style="" class="mt-4" ng-click="vm.SubmitAvatarProfile()" ng-disabled="vm.PreviewImage == vm.currentUser.Avatar">
       </form>
     </div>
   </div>
@@ -1237,7 +1242,7 @@
       </div>
       <img ng-src="{{vm.PreviewImage}}" ng-click="vm.ZoomImage(vm.PreviewImage)" style="cursor:pointer;width: 300px;border-radius: 0px;">
       <form>
-        <input type="submit" value="Lưu" style="" class="mt-4" ng-click="vm.SubmitCoverProfile()">
+        <input type="submit" value="Lưu" style="" class="mt-4" ng-click="vm.SubmitCoverProfile()" ng-disabled="vm.PreviewImage == vm.currentUser.CoverImage">
       </form>
     </div>
   </div>
