--- a/src/client/app/newfeed/newfeed.html
+++ b/src/client/app/newfeed/newfeed.html
@@ -265,7 +265,7 @@
           Thêm vị trí
         </a>
       </div>
-      <button type="button" class="btn btn-post btn-sm">Đăng</button>
+      <button type="button" class="btn btn-post btn-sm" ng-click="vm.CreatePost()">Đăng</button>
     </div>
   </div>
   <div class="picModal" ng-show="vm.myZoom" ng-click="vm.closeZoomFunct()">
